# DePauw-longboard

./: README.md  pyproject.toml
longboard/: main.py  utils.py
longboard/modules/data/: __init__.py  data_processing.py  feature_extraction.py  utils.py
longboard/modules/plots/: __init__.py  plot_utils.py  report.py
longboard/modules/training/: __init__.py  evaluate.py  models.py  train.py
