[project]
name = "longboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch", "tensorflow", "scikit-learn", "matplotlib", "scipy", "imblearn"
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "playground*", "scripts*", "tests*", "data*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "playground*", "scripts*", "tests*", "data*"]